<resources>
    <string name="app_name">nicos-android</string>
    <string name="action_settings">Settings</string>
    <string name="action_connection_info">Connection info</string>
    <string name="no_connection">Not connected.</string>
    <string name="title_activity_connection_info">Connection Info</string>
    <string name="title_activity_login">Connect to a NICOS daemon</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_hostname">Hostname</string>
    <string name="prompt_port">Port</string>
    <string name="action_sign_in">Login</string>
    <string name="error_field_required">Must not be empty</string>

    <!-- Strings in SlidingUpPanelLayout -->
    <string name="prompt_coarse_steps">Coarse step</string>
    <string name="prompt_fine_steps">Fine step</string>
    <string name="btn_save_config">Save Configuration</string>
    <string name="no_device">None</string>

    <!-- Button labels -->
    <!-- &lt; == < -->
    <!-- &gt; == > -->
    <string name="btn_coarse_left">&lt;&lt;</string>
    <string name="btn_fine_left">&lt;</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_fine_right">&gt;</string>
    <string name="btn_coarse_right">&gt;&gt;</string>

    <!-- Description for Status LED -->
    <string name="status_led">Status LED</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="key_jk_design_switch">JK_DESIGN_SWITCH</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_jk_design">Enable JK Design</string>
    <string name="pref_description_jk_design">An alternative layout with big buttons</string>

</resources>
