<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/buttonsView"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentStart="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop"
            android:id="@+id/stopButton"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fine_right"
            android:id="@+id/fineStepRightButton"
            android:layout_alignTop="@+id/stopButton"
            android:layout_toEndOf="@+id/stopButton"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fine_left"
            android:id="@+id/fineStepLeftButton"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/stopButton"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_coarse_left"
            android:id="@+id/coarseStepLeftButton"
            android:layout_alignTop="@+id/fineStepLeftButton"
            android:layout_toStartOf="@+id/fineStepLeftButton"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_coarse_right"
            android:id="@+id/coarseStepRightButton"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/fineStepRightButton"
            android:enabled="false" />
    </RelativeLayout>
</RelativeLayout>