<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:id="@+id/speedButtonsLayout"
            android:layout_gravity="top"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:id="@+id/leftSpeedButtonsLayout">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_coarse_left"
                    android:id="@+id/coarseStepLeftButton"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:textSize="50sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_fine_left"
                    android:id="@+id/fineStepLeftButton"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:textSize="50sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:id="@+id/rightSpeedButtonsLayout">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_coarse_right"
                    android:id="@+id/coarseStepRightButton"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:textSize="50sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_fine_right"
                    android:id="@+id/fineStepRightButton"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:textSize="50sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_stop"
            android:id="@+id/stopButton"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="50sp"
            android:background="#cd2525" />
    </LinearLayout>
</RelativeLayout>